# FluxGate

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README-CN.md  README.md  docker-compose.yml  install.sh
.github/workflows/: ci.yml
crates/fluxgate-admin/: Cargo.toml
crates/fluxgate-admin/src/: access.rs  acme.rs  assets.rs  auth.rs  challenge.rs  cloudflare.rs  collector.rs  integration_tests.rs  iprange.rs  l4.rs  main.rs  pages.rs  persist.rs  proxy.rs  rpc.rs  serve.rs  state.rs  throttle.rs  tls.rs  traffic.rs  waf.rs  waf_packs.rs  waf_semantic.rs
crates/fluxgate-core/: Cargo.toml
crates/fluxgate-core/src/: lib.rs  models.rs
crates/fluxgate-waf/: Cargo.toml
crates/fluxgate-waf-difftest/: Cargo.toml  build.rs
crates/fluxgate-waf-difftest/src/: lib.rs
crates/fluxgate-waf-difftest/tests/: differential.rs  xss_differential.rs
crates/fluxgate-waf/data/: ATTRIBUTION.md
crates/fluxgate-waf/src/: cmdi.rs  decode.rs  deser.rs  extract.rs  java.rs  lib.rs  nosql.rs  php.rs  prefilter.rs  proto.rs  ssrf.rs  ssti.rs  traversal.rs  xxe.rs
crates/fluxgate-waf/src/sqli/: mod.rs  tokenizer.rs
crates/fluxgate-waf/src/sqli/libinjection/: fold.rs  keywords.rs  mod.rs  tokenizer.rs
crates/fluxgate-waf/src/xss/: mod.rs
crates/fluxgate-waf/src/xss/libinjection/: blacklists.rs  html5.rs  mod.rs
crates/fluxgate-waf/tests/: corpus.rs  libinjection_fuzz.rs  libinjection_html5_oracle.rs  libinjection_oracle.rs  libinjection_regression.rs
docs/: INTEGRATION.md
web/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts
web/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
web/src/api/: errors.ts  rpc.ts  session.ts
web/src/components/charts/: Charts.tsx
web/src/components/layout/: AppLayout.tsx  Header.tsx  Sidebar.tsx  nav.ts
web/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  ConfirmDialog.tsx  CountryMultiSelect.tsx  DataTable.tsx  Field.tsx  LanguageSwitcher.tsx  LiveIndicator.tsx  Modal.tsx  PageHeader.tsx  StatCard.tsx  States.tsx  Toggle.tsx
web/src/context/: AuthContext.tsx  ThemeContext.tsx  ToastContext.tsx
web/src/hooks/: useRpc.ts
web/src/i18n/: I18nContext.tsx  locales.ts
web/src/lib/: status.ts  utils.ts
web/src/mock/: index.ts
web/src/pages/: AccessLogsPage.tsx  AccessPage.tsx  CertificatesPage.tsx  Dashboard.tsx  L4RoutesPage.tsx  Login.tsx  MetricsPage.tsx  RiskPage.tsx  RouteAnalyticsPage.tsx  RoutesPage.tsx  SemanticEngineCard.tsx  SettingsPage.tsx  UpstreamsPage.tsx  WafRulesPage.tsx
web/src/types/: index.ts
